<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background_fragment"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnXoatrangdangky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/dangky_button"
            android:ems="6"
            android:onClick="xoatrang"
            android:text="@string/xoatrang"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:background="@drawable/main_background"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/txtMasodangky"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mabimat"
                android:textAppearance="?android:attr/textAppearance" />

            <TextView
                android:id="@+id/txtLuuydangky"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luuy" />

            <EditText
                android:id="@+id/txtNhapmasodangky"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/main_edittext"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/txtTendangnhapdangky"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tendangnhap"
                android:textAppearance="?android:attr/textAppearance" />

            <EditText
                android:id="@+id/txtNhaptendangnhapdangky"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/main_edittext" />

            <TextView
                android:id="@+id/txtMatkhaudangky"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/matkhau"
                android:textAppearance="?android:attr/textAppearance" />

            <EditText
                android:id="@+id/txtNhapmatkhaudangky"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/main_edittext"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/btnDangkydangky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/main_button"
            android:ems="9"
            android:onClick="dangky"
            android:text="@string/dangky" />
    </LinearLayout>
</ScrollView>