<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/main_quenmatkhau"
    android:orientation="vertical"
    android:padding="13dp" >

    <TextView
        android:id="@+id/txtMasoquen"
        style="@style/WhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mabimat"
        android:textAppearance="?android:attr/textAppearance" />

    <EditText
        android:id="@+id/txtNhapmasoquen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/main_edittext"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/txtMatkhauquen"
        style="@style/WhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/matkhaumoi"
        android:textAppearance="?android:attr/textAppearance" />

    <EditText
        android:id="@+id/txtNhapmatkhauquen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/main_edittext"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/txtMatkhau2quen"
        style="@style/WhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nhaplaimatkhau"
        android:textAppearance="?android:attr/textAppearance" />

    <EditText
        android:id="@+id/txtNhapmatkhau2quen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/main_edittext"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnThaydoiquen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/main_button"
        android:ems="8"
        android:text="@string/taomatkhau" />

</LinearLayout>