<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background_fragment">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/logo" />

        <LinearLayout
            android:id="@+id/layoutDangnhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="13dp"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_background"
                android:padding="12dp"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtTendangnhapmain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tendangnhap"
                        android:textAppearance="?android:attr/textAppearance"
                        android:textColor="#FFFF" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtNhaptendangnhapmain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_span="2"
                        android:background="@drawable/main_edittext"
                        android:drawableLeft="@mipmap/user_icon"
                        android:drawablePadding="3dp"
                        android:singleLine="true" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtMatkhaumain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/matkhau"
                        android:textAppearance="?android:attr/textAppearance"
                        android:textColor="#FFFF" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtNhapmatkhaumain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_span="2"
                        android:background="@drawable/main_edittext"
                        android:drawableLeft="@mipmap/password_icon"
                        android:drawablePadding="3dp"
                        android:inputType="textPassword"
                        android:singleLine="true" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnDangkymain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="left|center_vertical"
                        android:onClick="dangky"
                        android:text="@string/dangky"
                        android:textColor="#FFFF" />

                    <Button
                        android:id="@+id/btnQuenmatkhaumain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="right|center_vertical"
                        android:onClick="quenmatkhau"
                        android:text="@string/quenmatkhau"
                        android:textColor="#FFFF" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/chkGhinhomain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_span="2"
                        android:text="Duy trì đăng nhập"
                        android:textAppearance="?android:attr/textAppearance"
                        android:textColor="#FFFF" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/btnDangnhapmain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/main_button"
                android:ems="10"
                android:onClick="dangnhap"
                android:text="@string/dangnhap" />
        </LinearLayout>

    </FrameLayout>
</ScrollView>